# qol-tweaks

./: .gitignore  README.md
cinematic-skip/: CMakeLists.txt
cinematic-skip/src/: main.cpp  settings.cpp  settings.h
